<resources>
    <string name="app_name">Test</string>
    <string name="midd">MIDD</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    /*Общее*/
    <string name="compound">"Состав:"</string>
    /*Апероль*/
    <string name="name_aperol">"Апероль Шприц"</string>
    <string name="text_aperol"> "   Впервые лёгкий аперитив с низким содержанием алкоголя под маркой Aperol был выпущен в 1919 году семейной компанией «Барбиери», расположенной в городе Падуя. Но широкую известность напиток приобрёл после Второй мировой войны."</string>
    <string name="compound_aperol">"Апероль 100мл\nПроссеко 100мл\nСодовая 20мл\nАпельсин 40г"</string>
    <string name="how_make_aperol">"Аккуратно соединить в бакале,\n украсить долькой апельсина."</string>
    /*Мери*/
    <string name="name_mary">"Кровавая Мери"</string>
    <string name="text_mary"> "   Считается, что назван этот коктейль в честь первой английской королевы, ярой католички — Марии I Тюдор. Она учиняла весьма жестокие расправы над протестантами, за что получила прозвище Кровавая Мэри."</string>
    <string name="compound_mary">"Водка Царская 50мл\nТоматный сок 120мл\nЛимонный сок 10мл\nСельдерей 15г\nТабаско соус красный 1мл\nВорчестер соус 1мл\nЧерный перец молотый 1г"</string>
    <string name="how_make_mary">"Смешать все в шейкере,\n украсить палочкрй сельдирея."</string>
    /*Мохито*/
    <string name="name_moxito">"Мохито"</string>
    <string name="text_moxito"> "   Пират по имени Сильвио Суарес Диас придумал смешивать самогон с сахаром, травами и соком лимона. Ароматные компоненты забивали неприятный запах дешевого спиртного, а лимон спасал от цинги."</string>
    <string name="compound_moxito">"Белый ром 50мл\nСахарный сироп 15мл\nСодовая 100мл\nЛайм 80г\nМята"</string>
    <string name="how_make_moxito">"Аккуратно соединить в бакале,\n украсить веточкой мяты."</string>
    /*Маргарита*/
    <string name="name_margarita">"Маргарита"</string>
    <string name="text_margarita"> "   Автором коктейля считается техасская аристократка Маргарита Сеймес, которая предложила гостям на своей вилле в Акапулько новый микс текилы, апельсинового ликёра и сока лайма. "</string>
    <string name="compound_margarita">"Текила 50мл\nТрипл сек25мл\nСахарный сироп 10мл\nЛаймовый сок 30мл\nЛайм 10г"</string>
    <string name="how_make_margarita">"Смешать все в шейкере,\n перелить в низкий бокал."</string>
    /*Лонг*/
    <string name="name_longa">"Лонг Айланд"</string>
    <string name="text_longa"> "   Коктейль был впервые изобретён в годы Сухого закона, так как внешне и ароматом напоминает айс-ти. Вторая версия, что коктейль был впервые приготовлен в 70-х годах, барменом из ночного клуба в Смиттауне, остров Лонг-Айленд. "</string>
    <string name="compound_longa">"Водка 30	мл\nБелый ром 30 м\nСеребряная текила 30 мл\nДжин 30 мл\nТрипл сек 30 мл\nСахарный сироп 30 м\nЛимонный сок 30 мл\nКола 100 мл"</string>
    <string name="how_make_longa">"Аккуратно соединить в большом стакане."</string>
    /*Санрайз*/
    <string name="name_sunrise">"Санрайз"</string>
    <string name="text_sunrise"> "  Коктейль Восходящее солнце был изобретён в 40-е годы барменом Джином Сулитом в гостинице Аризона-Билтмор. "</string>
    <string name="compound_sunrise">"Текила 50мл\nГренадин 10 мл\nАпельсиновый сок 150 мл\nАпельсин 30 г"</string>
    <string name="how_make_sunrise">"Аккуратно соединить в стакане,\n украсить долькой апельсина"</string>


    <string name="action_settings">Settings</string>
    <string name="large_text">Settings</string>
    <string name="settings1">Разрешения</string>
    <string name="settings2">О приложении</string>
    <string name="settings3">Обратная связь</string>

    <string name="settings_full1">Нам нужно разрешение только на вашу улыбку:)</string>
    <string name="settings_full2">Назначение: выдавать информацию о возможности приготовления напитка, по введенным пользователем ингредиентам, а также информацию по составу, способу приготовления и истории создания.\n\n\nЦель создания: расширить базу знаний пользователя по существующим напиткам, дать возможность выполнить напиток без помощи бармена, а также упростить и ускорить поиск информации о возможности приготовления напитка по имеющимся ингредиентам.</string>
    <string name="settings_full3">Отзыв о приложении можно написать на почту\t\tdasha_n01@mail.ru</string>


    <string name="new_one_name">Время создать свой коктейл\n    Выбирай объем скорее!</string>

    <string name="order">Отправить заказ</string>
    <string name="shot">ШОТ 30мл</string>
    <string name="shortdrink">ШОРТ ДРИНК 150мл</string>
    <string name="longdrink">ЛОНГ ДРИНК 350мл</string>
</resources>